<resources>
    <string name="app_name">Hardware Sanity Tester</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About us</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="free_note">Hardware Sanity Tester is free software</string>
    <string name="copyright">Copyright \u00a9 2016 - Pawan Bathe - All Rights Resereved </string>
    <string name="feedback">For feedback: dev.hst@gmail.com</string>
    <string name="web">For Data Interpretation: <a href="http://hst.pawanbathe.com">http://hst.pawanbathe.com</a>  </string>
</resources>
